Fix layout issue with home message

--- a/disobedience/main.css
+++ b/disobedience/main.css
@@ -475,6 +475,8 @@ img {
       font-size: 13px;
       height: 94px; }
       .home .message .message-text p {
+        position: relative;
+        top: -6px;
         align-self: center;
         font-size: inherit;
         margin: 0;
